<resources>
    <string name="app_name">Smart Shopper</string>
    <string name="intro_first_line">The Smart Shopping Solution</string>
    <string name="intro_second_line">Shop is on your hand now!!</string>
    <string name="btn_login">User Login Here</string>
    <string name="btn_user_signup">New User? Register Here</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="user_login">User Login</string>
    <string name="registration_message">new user registration</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="contact_number">Contact number</string>
    <string name="btn_register">Register</string>


</resources>
